Added CodeClimate coverage (#8)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,18 @@ jobs:
                 - node_modules
 
           - run:
+              name: Setup Code Climate test-reporter
+              command: |
+                  curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+                  chmod +x ./cc-test-reporter
+
+          - run:
               name: Run Linter
               command: npm run lint
 
           - run:
               name: Run Tests
-              command: npm run test:ci
+              command: |
+                    ./cc-test-reporter before-build
+                    npm run test:ci
+                    ./cc-test-reporter after-build --exit-code $?
