--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "precommit": "npm run lint",
         "test": "jest --watch",
-        "test:ci": "jest --forceExit --detectOpenHandles",
+        "test:ci": "jest --coverage --forceExit --detectOpenHandles",
         "lint": "tslint -p tsconfig.json './src/**/*.ts' './__tests__/**/*.ts'"
     },
     "keywords": [
