--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "description": "Runtime type validation for TypeScript",
     "main": "build/index.js",
     "scripts": {
-        "precommit": "npm run lint",
         "test": "jest --watch",
         "test:ci": "jest --coverage --forceExit --detectOpenHandles",
         "lint": "tslint -p tsconfig.json './src/**/*.ts' './__tests__/**/*.ts'"
@@ -29,5 +28,10 @@
         "tslint": "5.11.0",
         "tslint-eslint-rules": "5.4.0",
         "typescript": "3.0.3"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint"
+        }
     }
 }
