--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
     "name": "typedec",
     "version": "0.0.1",
-    "description": "Runtime type validation for TypeScript",
+    "description": "Runtime type validation for TypeScript with decorators",
     "main": "build/index.js",
     "scripts": {
         "test": "jest --watch",
         "test:ci": "jest --coverage --forceExit --detectOpenHandles",
         "lint": "tslint -p tsconfig.json './src/**/*.ts' './__tests__/**/*.ts'"
     },
+    "homepage": "https://github.com/ekenigs/typedec",
+    "repository": "github:ekenigs/typedec",
     "keywords": [
         "typescript",
         "types",
@@ -16,14 +18,13 @@
         "decorators"
     ],
     "license": "MIT",
-    "dependencies": {
-        "reflect-metadata": "0.1.12"
-    },
+    "dependencies": {},
     "devDependencies": {
         "@types/jest": "23.3.2",
         "@types/node": "10.11.3",
         "husky": "1.1.0",
         "jest": "23.6.0",
+        "reflect-metadata": "0.1.12",
         "ts-jest": "23.10.3",
         "tslint": "5.11.0",
         "tslint-eslint-rules": "5.4.0",
