--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "strict": true,
         "strictNullChecks": true,
         "lib": ["es2018"],
-        "types": ["reflect-metadata", "jest"],
+        "types": ["node", "reflect-metadata", "jest"],
         "typeRoots": ["node_modules/@types"]
     },
     "exclude": ["node_modules", "__tests__", "build"]
